--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -369,6 +369,9 @@
             nav li a {
                 font-size: 1.2rem;
             }
+            .suggestion-section{
+                width: 100%;
+            }
         }
     </style>
 </head>
