--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -500,13 +500,13 @@
         <h5>Developed by Uppunuti Siddhartha</h5><br>
         <h6>Python full stact Developer</h6>
         <div class="social">
-            <a href="https://www.linkedin.com/in/your-profile" target="_blank" title="LinkedIn">
+            <a href="https://www.linkedin.com/in/siddhartha55/" target="_blank" title="LinkedIn">
                 <i class="fab fa-linkedin"></i>
             </a>
-            <a href="mailto:your.email@example.com" title="Email">
+            <a href="mailto:uppunutisiddhartha@gmail.com" title="Email">
                 <i class="fas fa-envelope"></i>
             </a>
-            <a href="https://github.com/yourusername" target="_blank" title="GitHub">
+            <a href="https://github.com/uppunutisiddhartha" target="_blank" title="GitHub">
                 <i class="fab fa-github"></i>
             </a>
             <a href="https://portifolio-7kgi.onrender.com/" title="Contact">
